--- a/client/src/components/style/login.css
+++ b/client/src/components/style/login.css
@@ -2,7 +2,7 @@ body{
     background-color: aqua;
     margin: auto;
     padding: auto;
-    background-image: url('/src/img/cool.jpg');
+    background-image: url('../img/cool.jpg');
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
@@ -17,11 +17,15 @@ body{
     padding-bottom: 37px;
 }
 
-.signup{
+#a{
+    color: white;
+}
+
+.login{
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    padding-top: 10px;
+    padding-top: 1px;
     width: 60%;
     min-height: 400px; 
     margin: 33.3px auto;
@@ -31,7 +35,7 @@ body{
     display: flex;
     flex-direction: column;
     justify-content: center;
-    padding-top: 10px;
+    padding-top: 0px;
     width: 50%;
     min-height: 400px; 
     margin: 33.3px auto;
@@ -41,9 +45,9 @@ body{
     display: flex;
     flex-direction: column;
     justify-content: center;
-    min-height: 400px;
+    min-height: 300px;
     padding: 10px;
-    margin:  auto;
+    margin: auto;
     width:90%;
     border-radius: 15px;
     background-color: rgba(255, 255, 255, 0.603);
@@ -55,14 +59,9 @@ body{
 }
 
 .form-control{
-    margin-top: 15px;
-    /* border: 1px solid black; */
-}
-input{
-    margin-top: 15px;
-    width: 100%;
-    padding: 7px;
+    margin-top: 1px;
     border: 1px solid black;
+    color: black;
 }
 
 h1{
@@ -72,6 +71,7 @@ h1{
 .btn{
     width: 200px;
     border-radius: 20px;
+    border: none;
 }
 
 .col{
@@ -82,7 +82,6 @@ h1{
 
 p{
     text-align: center;
-    padding: 10px;
 }
 
 @media only screen and (max-width: 768px) {
@@ -90,7 +89,7 @@ p{
     .card {
       width: 100%;
     }
-    .signup{
+    .login{
         width: 100%;
     }
     .container{
