--- a/client/src/components/style/home.css
+++ b/client/src/components/style/home.css
@@ -6,26 +6,44 @@ body{
 }
 
 .wave-container{
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
     position: relative;
-    background: rgb(0, 0, 0);
     color: aliceblue;
     text-align: center;
     overflow: hidden;
-    margin-bottom: 0px;
-    padding: 0;
-    /* background-image: url('../img/cute.jpg'); */
+    background-image: url('../img/cute.jpg');
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
     min-height: 601px;
 }
+#a{
+    color: white;
+}
+
+.btn-div{
+    text-align: center;
+    margin: 10px;
+}
+
+.btn{
+    justify-content: center;
+    width: 200px;
+    border-radius: 20px;
+    border: none;
+}
 
 .text{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    background-color: rgba(0, 0, 0, 0.5);
     text-align: center;
     color: rgb(250, 250, 250);
+    width: 60%;
+    min-height: 400px;
+    margin: 90px 250px;
+
+
 }
 
 @keyframes animateWave{
@@ -41,18 +59,21 @@ body{
     padding-bottom: 0px;
 }
 
-.svg >svg{
+/* .svg >svg{
     display: block;
-    justify-content: end;
+    justify-content: baseline;
     transform-origin: bottom;
     animation: animateWave 100ms cubic-bezier(0.23, 1, 0.32, 1);
     margin-bottom: 0px;
     padding-bottom: opx;
-}
+} */
 
 @media only screen and (max-width: 768px) {
     /* For mobile phones: */
     .wave-container{
+        width: 100%;
+    }
+    .text{
         width: 100%;
     }
   }
